# cast

./: .gitignore  3D_batch_config.yaml  3D_config_eager.yaml  3D_config_small.yaml  3D_config_test.yaml  README.markdown  README.md  TextGrids2json.py  audio_processing.py  cast.py  cast_config.yml  cast_devel_conda_env.yaml  cast_exclude_example.yml  cast_stable_conda_env.yaml  concatenateSWR.py  config_example.yml  doc_generation_commands  ex2_2_json_or_csv.py  ex2_concat.py  extractSWR.py  licenseheaders_command  meta_and_segments2json.py  pixi.toml  pyproject.toml  siwortkit_stable_conda_env.yaml  svaa_2_json.py  textgrid2csv_and_json.py  textgrid2csv_complex_onsets.py
cast/: __init__.py  aaa_meta.py  audio_processing.py  clean_textgrids.py  command_line.py  commands.py  concatenate.py  config_file_io.py  configuration.py  csv_meta.py  csv_output.py  extract.py  rasl_dat_to_wav.py  rasl_meta.py  textgrid_functions.py
cast/meta/: __init__.py  aaa_meta.py  cast_meta.py  csv_meta.py  rasl_meta.py
devel/: cast_devel_conda_env.yaml  cast_stable_conda_env.yaml  doc_generation_commands  licenseheaders_command
docs/: Changelog.md  Development_guide.markdown
example_data/: cast_config.yaml  cast_exclude_example.yaml  cast_exclusion.yaml
example_data/long_utterances/: cast_long_utterances.yml  contents.csv  long_utterances_example_pronunciation_dictionary.csv
example_data/single_words/data/: cast_config.yaml
old_code/: UTI_meta.py  concatenateSWR.py  ex1_concat.py  ex1_praat_extract.py  ex2_2_json.py  ex2_fav_extract.py  ex3_pre_fave.py  ex4_concat.py  ex4_fav_extract.py  ex4_textgrid2csv_and_json.py  meta_and_tg2json.py
source/cast/: __init__.py  audio_processing.py  configuration.py  path_functions.py  rasl_dat_to_wav.py
source/computer-assisted-segmentations-tools/: __init__.py  cli.py  commands.py  extract.py
source/computer-assisted-segmentations-tools/meta/: aaa_meta.py
source/computer_assisted_segmentation_tools/: __init__.py  audio_processing.py  clean_textgrids.py  cli.py  command_line.py  commands.py  concatenate.py  configuration.py  configuration_classes.py  configuration_parser.py  csv_output.py  exclusion.py  extract.py  path_functions.py  pydantic_extensions.py  rasl_dat_to_wav.py  textgrid_functions.py  wav_handling.py
source/computer_assisted_segmentation_tools/meta/: __init__.py  aaa_meta.py  cast_meta.py  csv_meta.py  rasl_meta.py
test_cases/: cast_exclude_example.yml
