[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "computer_assisted_segmentation_tools"
version = "0.1.0"
description = "CAST - Computer Assisted Segmentation Tools"
authors = [
    {name = "Pertti Palo", email = "giuthas@gmail.com"}
]
channels = ["conda-forge"]
platforms = ["linux-64"]
license = "GPL-3.0"
readme = "README.md"

[project.scripts]
cast = "source.computer_assisted_segmentation_tools:run_cli"
computer_assisted_segmentation_tools = "source.computer_assisted_segmentation_tools:run_cli"

[dependencies]
python = ">=3.10,<3.13"

[tool.pixi.project]
channels = ["default", "conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.hatch.build.targets.sdist]
include = [
  "/source",
]

[tool.hatch.build.targets.wheel]
include = ["source/"]

[tool.pixi.pypi-dependencies]
pixi-py = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.1.0,<2.2"
scipy = ">=1.14.1,<1.15"
matplotlib = ">=3.9.2,<3.10"
strictyaml = ">=1.7.3,<1.8"

[tool.pixi.feature.devel.dependencies]
pylint = ">=2.7.2,<3.3"
autopep8 = ">=1.3.2,<2.4"
icecream = ">=2.1.3,<2.2"
licenseheaders = "*"
