[project]
name = "computer_assisted_segmentation_tools"
version = "0.2.0"
description = "CAST - Computer Assisted Segmentation Tools"
authors = [
    { name = "Pertti Palo", email = "giuthas@gmail.com" }
]
license = "GPL-3.0"
readme = "README.md"
requires-python = ">=3.10,<3.13"

[project.scripts]
cast = "source.computer_assisted_segmentation_tools:run_cli"
computer_assisted_segmentation_tools = "source.computer_assisted_segmentation_tools:run_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/source",
]

[tool.hatch.build.targets.wheel]
include = ["source/"]

[tool.pixi.project]
channels = ["default", "conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.12.3,<3.13"
pydantic = ">=2.9.2,<3"
pixi-pycharm = ">=0.0.7,<0.0.8"
strictyaml = ">=1.7.3,<2"
scipy = ">=1.14.1,<2"
matplotlib = ">=3.9.2,<4"
numpy = ">=2.1.2,<3"

[tool.pixi.pypi-dependencies]
computer-assisted-segmentation-tools = { path = ".", editable = true }
praat-textgrids = ">=1.4.0, <2"

[tool.pixi.feature.devel.dependencies]
pylint = ">=2.7.2,<3.3"
autopep8 = ">=1.3.2,<2.4"
icecream = ">=2.1.3,<2.2"

[tool.pixi.feature.devel.pypi-dependencies]
licenseheaders = ">=0.8.8, <0.9"

[tool.pixi.environments]
devel = ["devel"]
